# aegis-keys-with-soteria

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: quickstart.rs
src/: aead.rs  aegis_key.rs  error.rs  hierarchy.rs  kdf.rs  lib.rs  slots.rs
tests/: integration.rs
